// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuizChoice applies correct styling when answer is correct 1`] = `
<div
  onClick={[MockFunction]}
  style={
    [
      {
        "borderColor": "#F0C2D9",
        "borderRadius": 8,
        "borderWidth": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      {
        "backgroundColor": "#FFD9EB",
        "borderColor": "#FF9FCC",
      },
      false,
      undefined,
    ]
  }
  testID="quiz-choice"
>
  1. Test Option
</div>
`;

exports[`QuizChoice applies incorrect styling when answer is incorrect 1`] = `
<div
  onClick={[MockFunction]}
  style={
    [
      {
        "borderColor": "#F0C2D9",
        "borderRadius": 8,
        "borderWidth": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      false,
      {
        "backgroundColor": "#F44336",
        "borderColor": "#F44336",
      },
      undefined,
    ]
  }
  testID="quiz-choice"
>
  1. Test Option
</div>
`;

exports[`QuizChoice renders correctly with the right label 1`] = `
<div
  onClick={[MockFunction]}
  style={
    [
      {
        "borderColor": "#F0C2D9",
        "borderRadius": 8,
        "borderWidth": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      false,
      false,
      undefined,
    ]
  }
  testID="quiz-choice"
>
  1. Test Option
</div>
`;
